@@ -1,3 +1,7 @@
+2019-07-08  Jim Wilson  <jimw@sifive.com>
+
+	* gcc.target/riscv/shift-shift-2.c: Add one more test.
+
 2019-07-08  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/65143
